<resources>
    <string name="app_name">権限移譲対象アプリ</string>
    <string name="state_enable">Enable</string>
    <string name="state_disable">Disable</string>
    <string name="state_success">[SUCCESS]</string>
    <string name="state_failure">[FAILURE]</string>
    <string name="description_certificate_fragment">We have a certificate named \'Example 1\' available for you.</string>
    <string name="description_restriction_fragment">We fixed the restricted app as Google chrome app</string>
    <string name="button_cert_get">Get number of user CA certs</string>
    <string name="button_cert_install">Install \'Example 1\' user CA cert</string>
    <string name="button_cert_uninstall">Uninstall \'Example 1\' user CA cert</string>
    <string name="button_cert_uninstall_all">Uninstall all user CA certs</string>
    <string name="google_chrome">Google chrome</string>
    <string name="restriction_incognito_mode">Disable incognito mode</string>
    <string name="restriction_edit_bookmarks">Disable edit bookmarks</string>
    <string name="package_name">Package name</string>
    <string name="policy">Policy</string>
    <string name="grant_state">Grant state</string>
    <string name="auto_grant">Auto grant</string>
    <string name="prompt">Prompt</string>
    <string name="auto_deny">Auto deny</string>
    <string name="permission">Permission</string>
    <string name="grant_state_grant">Grant</string>
    <string name="grant_state_default">Default</string>
    <string name="grant_state_deny">Deny</string>
    <string name="clear">Clear</string>
    <string name="hide">Hide</string>
    <string name="suspend">Suspend</string>
    <string name="uri">Uri</string>
    <string name="esa_helper_text">Press SEND button to Enable app</string>
    <string name="bu_helper_text">Press SEND button to Block</string>
    <string name="network_logging">Network logging</string>
    <string name="security_logging">Security logging</string>
    <string name="retrieve_logs">Retrieve logs</string>
    <string name="call_1200_apis">Call 1200 apis</string>
    <string name="is_enable_network_logging">Is enable network logging</string>
    <string name="is_enable_security_logging">Is enable security logging</string>
    <string name="retrieve_pre_reboot_logs">Retrieve pre-reboot logs</string>
</resources>