<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.vti.android.delegatedscopemanagement.testapp.ui.main.restriction.contract.RestrictViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.main.restriction.RestrictFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                style="@style/Widget.App.CollapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutLargeSize">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.App.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_round_arrow_back_24"
                    app:title="Restriction" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.App.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_restriction_fragment" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.App.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/google_chrome"
                android:textSize="20sp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/incognito"
                style="@style/Widget.App.CompoundButton.MaterialSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{vm.isIncognitoEnable()}"
                android:onCheckedChanged="@{(_, isChecked) -> vm.onChangeIncognitoMode(isChecked)}"
                android:paddingHorizontal="12dp"
                android:text="@string/restriction_incognito_mode" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/editBookmarks"
                style="@style/Widget.App.CompoundButton.MaterialSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{vm.isEditBookmarksEnable()}"
                android:onCheckedChanged="@{(_, isChecked) -> vm.onChangeEditBookmarks(isChecked)}"
                android:paddingHorizontal="12dp"
                android:text="@string/restriction_edit_bookmarks" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                tools:listitem="@layout/item_log" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
