<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.vti.android.delegatedscopemanagement.testapp.ui.main.networkinglogs.contract.NetworkingLogsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.main.networkinglogs.NetworkingLogsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                style="@style/Widget.App.CollapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutLargeSize">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.App.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_round_arrow_back_24"
                    app:title="Networking logs" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/checkbox"
                style="@style/Widget.App.CompoundButton.MaterialSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{vm.isEnable()}"
                android:onCheckedChanged="@{(_, isEnable) -> vm.enableNetworkLogging(isEnable)}"
                android:paddingHorizontal="12dp"
                android:text="@string/network_logging" />

            <Button
                style="@style/Widget.App.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!vm.isLoading()}"
                android:onClick="@{_ -> vm.retrieve()}"
                android:text="@string/retrieve_logs" />

            <Button
                style="@style/Widget.App.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!vm.isLoading()}"
                android:onClick="@{_ -> vm.callApis(1201)}"
                android:text="@string/call_1200_apis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                tools:listitem="@layout/item_log" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
